# csvtopg

./: .coveragerc  .isort.cfg  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.rst  requirements-base.txt  requirements.txt  sample_config.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  spelling_wordlist.txt
src/csvtopg/: __init__.py  aiocsv.py  application.py  cli.py  configuration.py  main.py  skeleton.py
tests/: conftest.py  test_skeleton.py  travis_install.sh
tests/functional/: test_incorrect_invocations.py
tests/performance/: test_wall_clock_full_invocation_time.py
tests/unit/: test_configuration.py
