# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]

name = csvtopg
description = Fast utility to load a CSV file in a PostgreSQL table
author = Alexandre Gravier
author-email = al.gravier@gmail.com
license = GPLv3
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/agravier/csvtopg/
project-urls =
    Documentation = https://csvtopg.readthedocs.org/en/latest
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Topic :: Database


[options]

zip_safe = True
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm
install_requires =
    aiofile
    asyncpg
    click
    dacite
    toml


# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires = numpy; scipy
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.7


[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
console_scripts =
    csvtopg = csvtopg.cli:cli


[options.extras_require]
# Add here additional requirements for extra features, like:
all =
    uvloop
uvloop =
    uvloop

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov csvtopg --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length=80
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
